spacing fixes
fixes for spacing

--- a/public/css/baseStyle.css
+++ b/public/css/baseStyle.css
@@ -45,7 +45,7 @@ body *{
 
 .app_segment{
     width: 100%;
-    padding: 40px;
+    padding: 20px 40px;
     /*min-height: 200px;*/
 }
 
@@ -137,10 +137,10 @@ p.blue{
 }
 
 .main-btn{
-    margin: 20px auto;
+    margin: 0 auto;
     display: block;
-    height: 40px;
-    line-height: 40px;
+    height: 50px;
+    line-height: 50px;
 }
 .main-btn:after{
     content: '';
@@ -161,9 +161,9 @@ p.blue{
 }
 
 .arrow{
-    margin-top: 5px;
+    margin-top: 15px;
     display: block;
-    height: 30px;
+    height: 20px;
     width: auto;
 }
 
@@ -303,7 +303,7 @@ span.accent_basic{
     width: auto;
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 374px) {
     .horeca_arrow{
         display: none!important;
     }
